Fixed dmenu aethetic.

--- a/.config/i3/aesthetics.conf
+++ b/.config/i3/aesthetics.conf
@@ -1,5 +1,5 @@
 # Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
-font $fontFamily $fontsize
+font pango:$fontFamily $fontsize
 
 # property                border       background   text         indicator
 client.focused            $background  $background  $foreground  $none
