--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -187,7 +187,7 @@ bindsym   $MAC_CTRL+s layout                    toggle split
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING USER SESSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # lock screen
-bindsym   $MAC_CMD+$MAC_CTRL+q                  exec i3lock
+bindsym   $MAC_CMD+$MAC_CTRL+q                  exec 'i3lock -c $accent'
 
 # exit i3 (logs you out of your X session)
 set       $exitWarn                             "i3-nagbar -t warning -m 'Are you sure you want to log out?' -B 'confirm' 'i3-msg exit'"
@@ -213,14 +213,8 @@ bindsym   XF86MonBrightnessDown                 exec --no-startup-id brightnessc
 # bindcode $MAC_CTRL+40 exec --no-startup-id i3-dmenu-desktop
 
 # dmenu
-set   $search_case_insensitive                  -i
-set   $dmenu_amount_of_Lines                    -l 10
-set   $dmenu_foreground                         -nf
-set   $dmenu_foreground_selected                -sf
-set   $dmenu_background                         -nb
-set   $dmenu_background_selected                -sb
-bindsym $MAC_CMD+space                          exec --no-startup-id dmenu_run $search_case_insensitive 
-#$dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
+bindsym $MAC_CMD+space                          exec --no-startup-id dmenu_run -i -l 10 -p "search:" -fn "$fontFamily-$fontSize" -nf $inactive -nb $background -sb $background -sf $foreground
+#i3-nagbar -m 
 
 # rofi
 set   $rofi_amount_of_Lines                     -l 10
