Added my terminal to the startup processes. This results in that when I log in, a terminal session is automatically also opend for me.

--- a/.config/i3/startup_processes.conf
+++ b/.config/i3/startup_processes.conf
@@ -22,4 +22,6 @@ set $compton_fade_enable               -f
 #set $compton_fade_SOMETHING_ELSE       -O "0.05"
 exec --no-startup-id compton $compton_fade_enable
 
+exec --no-startup-id $terminal
+
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
